syntax = "proto2";

package config;

option go_package = "a.yandex-team.ru/cloud/disk_manager/test/mocks/metadata/config";

////////////////////////////////////////////////////////////////////////////////

message MetadataServiceMockConfig {
    required uint32 Port = 1;
    optional string AccessToken = 2;
}
